attached_assets/Pasted-S-EWW-TAG-or-fix-the-build-before-re-running-mkarchiso-_1778558944821.txt
S_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!?  3m1s
❯ tail -200  bake.log                                                                    00:08:26
  Downloaded mio v0.8.10
  Downloaded gio-sys v0.17.10
  Downloaded itertools v0.12.1
  Downloaded base64 v0.21.7
  Downloaded lasso v0.6.0
  Downloaded derivative v2.2.0
  Downloaded backtrace v0.3.68
  Downloaded bumpalo v3.13.0
  Downloaded windows-sys v0.52.0
  Downloaded parse-zoneinfo v0.3.0
  Downloaded codespan-reporting v0.11.1
  Downloaded pin-project-lite v0.2.12
  Downloaded zbus_macros v3.14.1
  Downloaded polling v2.8.0
  Downloaded crossbeam-utils v0.8.16
  Downloaded phf_macros v0.10.0
  Downloaded cairo-rs v0.17.10
  Downloaded gdk v0.17.1
  Downloaded glib-macros v0.17.10
  Downloaded toml v0.7.6
  Downloaded signal-hook v0.3.17
  Downloaded typenum v1.16.0
  Downloaded bytes v1.4.0
  Downloaded wasm-bindgen-macro-support v0.2.87
  Downloaded pango v0.17.10
  Downloaded socket2 v0.4.9
  Downloaded xdg-home v1.0.0
  Downloaded winapi-util v0.1.5
  Downloaded wasm-bindgen-macro v0.2.87
  Downloaded windows-targets v0.42.2
  Downloaded console v0.15.7
  Downloaded num-conv v0.1.0
  Downloaded windows_aarch64_gnullvm v0.48.2
  Downloaded windows_x86_64_gnullvm v0.48.2
  Downloaded sysinfo v0.30.5
  Downloaded addr2line v0.20.0
  Downloaded toml_datetime v0.6.3
  Downloaded winnow v0.5.11
  Downloaded jaq-core v1.2.1
  Downloaded chrono-tz-build v0.2.0
  Downloaded time-core v0.1.2
  Downloaded urlencoding v2.1.3
  Downloaded time v0.3.34
  Downloaded rustix v0.38.8
  Downloaded regex-syntax v0.7.4
  Downloaded cfg-expr v0.15.4
  Downloaded futures-lite v1.13.0
  Downloaded pango-sys v0.17.10
  Downloaded async-process v1.7.0
  Downloaded async-trait v0.1.73
  Downloaded hex v0.4.3
  Downloaded enumflags2_derive v0.7.7
  Downloaded proc-macro-hack v0.5.20+deprecated
  Downloaded phf v0.10.1
  Downloaded zvariant_derive v3.15.0
  Downloaded maplit v1.0.2
  Downloaded regex v1.10.3
  Downloaded pkg-config v0.3.27
  Downloaded digest v0.10.7
  Downloaded windows-sys v0.45.0
  Downloaded signal-hook-registry v1.4.1
  Downloaded petgraph v0.6.3
  Downloaded lalrpop v0.20.0
  Downloaded memoffset v0.9.0
  Downloaded parking v2.1.0
  Downloaded pin-utils v0.1.0
  Downloaded ordered-stream v0.2.0
  Downloaded wasm-bindgen v0.2.87
  Downloaded syn v2.0.50
  Downloaded zerocopy v0.7.32
  Downloaded hashbrown v0.14.3
  Downloaded serde_json v1.0.105
  Downloaded event-listener v2.5.3
  Downloaded num-traits v0.2.16
  Downloaded serde v1.0.197
  Downloaded cc v1.0.82
  Downloaded indexmap v1.9.3
  Downloaded parking_lot v0.12.1
  Downloaded memchr v2.7.1
  Downloaded serde_repr v0.1.16
  Downloaded block-buffer v0.10.4
  Downloaded adler v1.0.2
  Downloaded darling v0.14.4
  Downloaded indexmap v2.0.0
  Downloaded ahash v0.8.9
  Downloaded diff v0.1.13
  Downloaded log v0.4.20
  Downloaded proc-macro2 v1.0.78
  Downloaded serde_derive v1.0.197
  Downloaded string_cache v0.8.7
  Downloaded jaq-interpret v1.2.1
  Downloaded jaq-parse v1.0.2
  Downloaded bitflags v2.4.0
  Downloaded smallvec v1.11.0
  Downloaded getrandom v0.2.10
  Downloaded bitflags v1.3.2
  Downloaded ryu v1.0.15
  Downloaded bit-vec v0.6.3
  Downloaded ena v0.14.2
  Downloaded pico-args v0.5.0
  Downloaded redox_syscall v0.3.5
  Downloaded wasi v0.11.0+wasi-snapshot-preview1
  Downloaded redox_syscall v0.2.16
  Downloaded precomputed-hash v0.1.1
  Downloaded windows-targets v0.48.2
  Downloaded redox_users v0.4.3
  Downloaded errno-dragonfly v0.1.2
  Downloaded bit-set v0.5.3
  Downloaded autocfg v1.1.0
  Downloaded term v0.7.0
  Downloaded tiny-keccak v2.0.2
  Downloaded once_cell v1.19.0
  Downloaded rustversion v1.0.14
  Downloaded windows v0.52.0
  Downloaded windows v0.48.0
[customize_airootfs] step 2/5: warm-up build (failure expected at time-0.3.34)...
[customize_airootfs] step 3/5: patching time-0.3.34...
[customize_airootfs] patched /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs for E0282 (Vec<_> + collect::<Result<_, _>>)
[customize_airootfs] step 4/5: verifying patch...
[customize_airootfs] step 5/5: final build...
   Compiling serde_derive v1.0.197
   Compiling futures-macro v0.3.28
   Compiling thiserror-impl v1.0.46
   Compiling regex v1.10.3
   Compiling chrono-tz-build v0.2.0
   Compiling darling_macro v0.14.4
   Compiling enumflags2_derive v0.7.7
   Compiling tokio-macros v2.2.0
   Compiling ref-cast-impl v1.0.22
   Compiling derive_more v0.99.17
   Compiling phf_macros v0.10.0
   Compiling time v0.3.34
   Compiling strum_macros v0.26.1
   Compiling simplexpr v0.1.0 (/tmp/tmp.qS8KxEeQ2T/eww/crates/simplexpr)
   Compiling tracing-attributes v0.1.26
   Compiling cpufeatures v0.2.9
   Compiling hashbrown v0.12.3
   Compiling async-broadcast v0.5.1
   Compiling clap_builder v4.5.1
   Compiling xdg-home v1.0.0
   Compiling sha1 v0.10.5
   Compiling rayon-core v1.12.1
   Compiling lasso v0.6.0
   Compiling darling v0.14.4
   Compiling cached_proc_macro v0.19.1
   Compiling ref-cast v1.0.22
   Compiling async-trait v0.1.73
   Compiling is-terminal v0.4.9
error[E0282]: type annotations needed
  --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:84:28
   |
84 |         .map(|res| res.map(Into::into))
   |                            ^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the trait `Into`
   |
help: consider specifying the generic argument
   |
84 |         .map(|res| res.map(Into::<T>::into))
   |                                +++++

   Compiling chrono-tz v0.8.3
error[E0283]: type annotations needed
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:86:14
    |
 86 |     Ok(items.into())
    |              ^^^^
    |
note: multiple `impl`s satisfying `OwnedFormatItem: From<Vec<_>>` found
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/owned_format_item.rs:81:1
    |
 81 | impl From<Vec<FormatItem<'_>>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
120 | impl From<Vec<Self>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `Vec<_>` to implement `Into<OwnedFormatItem>`
help: try using a fully qualified path to specify the expected types
    |
 86 -     Ok(items.into())
 86 +     Ok(<Vec<_> as Into<OwnedFormatItem>>::into(items))
    |

   Compiling rand v0.8.5
   Compiling itertools v0.12.1
   Compiling tokio v1.36.0
   Compiling indexmap v1.9.3
   Compiling yuck v0.1.0 (/tmp/tmp.qS8KxEeQ2T/eww/crates/yuck)
   Compiling futures-util v0.3.28
   Compiling phf v0.10.1
   Compiling ordered-stream v0.2.0
   Compiling serde_repr v0.1.16
   Compiling derivative v2.2.0
   Compiling clap_derive v4.5.0
   Compiling async-recursion v1.0.4
Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `time` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
[customize_airootfs] FATAL: eww v0.6.0 build failed.
[customize_airootfs] waybar has been removed; the ISO would ship without any bar.
[customize_airootfs] Override NYXUS_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!?
❯                                          